Fixed animated arrow on small screen, deleted nav menu code at main.js

--- a/main.css
+++ b/main.css
@@ -699,11 +699,11 @@ nav a:hover {
 .main-nav-menu__level-2-li-animated-arrow {
     position: relative;
     left: 6px;
+    transition: left 250ms ease-in;
 }
 
 .main-nav-menu__level-2-li:hover .main-nav-menu__level-2-li-animated-arrow {
    left: 20px;
-   transition: left 250ms ease-in;
 }
 
 
@@ -751,7 +751,7 @@ nav a:hover {
 }
 }
 
-@media (max-width: 550px) {.main-nav-menu__level-2-li> a > span{
+@media (max-width: 550px) {.main-nav-menu__level-2-li:hover .main-nav-menu__level-2-li-animated-arrow{
     left: 6px;
     transition: none;
 }
@@ -764,6 +764,12 @@ nav a:hover {
 
 @media (max-width: 550px) {.main-nav-menu__container a {
     font-size: 12px;
+}
+}
+
+@media (max-width: 550px) {.main-nav-menu__level-1-li-icon-below-projects svg {
+    height: 90px;
+    width: 100px;
 }
 }
 
